--- a/notebooks/visualize_nidis.ipynb
+++ b/notebooks/visualize_nidis.ipynb
@@ -75,8 +75,8 @@
     "                     name='Raster Visible')\n",
     "\n",
     "selector = pnw.NestedSelect(options=indicator_dict,\n",
-    "                 levels=['Indicator', 'Season', 'File'],\n",
-    "                 layout=pn.Row)\n",
+    "                            levels=['Indicator', 'Season', 'File'],\n",
+    "                            layout=pn.Row)\n",
     "\n",
     "def display_selection(selector_values: dict):\n",
     "    indicator = selector_values['Indicator']\n",
@@ -90,8 +90,7 @@
     "                frame_width=1200,\n",
     "                tiles='EsriImagery',\n",
     "                visible=visible)\n",
-    "    yield rasterLayer\n",
-    "    "
+    "    yield rasterLayer"
    ]
   },
   {
@@ -101,13 +100,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pn.Column(pn.Row(selector, visible), pn.bind(display_selection, selector))"
+    "pn.Column(pn.Row(visible, selector), pn.bind(display_selection, selector))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed65b3af-d176-4619-8f5c-d220f1e01dfa",
+   "id": "c6fdc7b2-8f78-4d24-9fbb-2887d25470cf",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -129,7 +128,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.9.15"
   }
  },
  "nbformat": 4,
